Version: 1.5.0
Date: 29. 08. 2025
  Features:
    - Added difficulty mode setting with Normal and Uncommon options.
      Normal mode provides the existing instant cheaty upgrades.
      Uncommon mode requires upgraded items to exist in logistics storage and uses construction
      robots for non-cheaty upgrades.
---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 24. 08. 2025
  Features:
    - Added setting to continue generating quality change attempts at max quality. When enabled,
      entities at maximum quality will continue to accumulate manufacturing hours that drive
      quality change events for other entities in the factory.
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 22. 08. 2025
  Changes:
    - Removed support for rocket silos due to the 'send to orbit automatically' setting being reset on upgrades.
      Once a way can be found to manage this via API they will be added back in.
  Bugfixes:
    - Fixed machines losing their flipped status when their quality is changed
    - Machines marked for deconstruction are no longer targets for quality change events
      Thank you Stargateur for finding these issues!
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 21. 08. 2025
  Features:
    - Added the ability to turn off assemblers and furnaces as upgrade targets.
      They are still used to generate upgrade attempts for other entities, they are just
      not a target for upgrades themselves.
    - Added fine control over each entity that can change quality (in startup settings)
  Optimizations:
    - Refactored code to improve readability and remove some unecessary complexity
    - Cached frequently accessed storage fields for minor performance improvement
  Changes:
    - Updated the machine inspection output to be easier to understand