@@ -6,6 +6,8 @@ Date: 29. 08. 2025
       Normal mode provides the existing instant cheaty upgrades.
       Uncommon mode requires upgraded items to exist in logistics storage and uses construction
       robots for non-cheaty upgrades.
+    - Uncommon mode handles module upgrades when enabled, checking for upgraded
+      modules in logistics storage before upgrading them alongside their machines.
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.0
 Date: 24. 08. 2025
